snapshot-tests/tests/snapshots/annotate_snippets__unterminated_string.snap
---
source: snapshot-tests/tests/annotate_snippets.rs
expression: rendered
---
error: invalid basic string, expected `"`
 --> unterminated_string:1:9
  |
1 | foo = "\
  |         ^ expected `"`
